--- a/index.html
+++ b/index.html
@@ -2359,7 +2359,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 xxl:gap-x-8 xxl:gap-y-12 md:gap-x-6 md:gap-y-10 gap-x-4 gap-y-8">
             <div class="col-span-1 flex flex-col lg:gap-6 gap-4 duration-300 group/p-card small-tilt2">
                 <div class="relative overflow-hidden z-10">
-                    <a href="portfolio-details-v1.html" class="block">
+                    <a href="" class="block">
                         <img class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover/p-card:scale-105"
                             src="assets/images/sam.svg" alt="project thumb">
                     </a>
@@ -2374,7 +2374,7 @@
 
             <div class="col-span-1 flex flex-col lg:gap-6 gap-4 duration-300 group/p-card small-tilt2">
                 <div class="relative overflow-hidden z-10">
-                    <a href="portfolio-details-v1.html" class="block">
+                    <a href="" class="block">
                         <img class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover/p-card:scale-105"
                             src="assets/images/megatron.svg" alt="project thumb">
                     </a>
@@ -2388,7 +2388,7 @@
             </div>
             <div class="col-span-1 flex flex-col lg:gap-6 gap-4 duration-300 group/p-card small-tilt2">
                 <div class="relative overflow-hidden z-10">
-                    <a href="portfolio-details-v1.html" class="block">
+                    <a href="" class="block">
                         <img class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover/p-card:scale-105"
                             src="./assets/images/krishnas-kitchen.svg" alt="project thumb">
                     </a>
@@ -4298,7 +4298,7 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
                     </div>
                 </div>
                 <iframe class="w-full h-[330px] rounded"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d133.49729405974563!2d25.032808858865348!3d60.22744380079842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469208e4334254bf%3A0x2e655d87bc6a330c!2sAuringonkukka%20Daycare%20Centre!5e1!3m2!1sen!2sbd!4v1731406498073!5m2!1sen!2sbd"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.524388606461!2d78.4124202!3d17.482463799999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb91006cbf9a51%3A0x231d97eeca549719!2sLaxmi%20men%E2%80%99s%20hostel!5e0!3m2!1sen!2sin!4v1738605160307!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                     style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
