--- a/index.html
+++ b/index.html
@@ -948,13 +948,13 @@
                     <h5 class="text-light font-medium">EXPERIENCE</h5>
                     <div class="flex flex-col gap-1">
                         <span class="text-neutral2 text-opacity-80 text-base lg:text-lg font-thin">
-                            2022 - 2023
+                             2022 – 2023
                         </span>
                         <span class="text-neutral1 text-base lg:text-lg xl:text-xl">
-                            Shift Superviser
+                            MERN Stack Developer.
                         </span>
                         <span class="text-neutral2 text-opacity-80 text-base lg:text-lg font-thin">
-                            Wipro Infrastructure Engineering (JCP pistions manufacturing)    
+                            VSM INFOTECH PRIVATE LIMITED
                         </span>
                     </div>
                     <div class="flex flex-col gap-1">
@@ -973,7 +973,7 @@
                             2024 - 2025
                         </span>
                         <span class="text-neutral1 text-base lg:text-lg xl:text-xl">
-                            Mern-stack Developer
+                           Software Developer
                         </span>
                         <span class="text-neutral2 text-opacity-80 text-base lg:text-lg font-thin">
                             CO-Create pvt Ltd.
@@ -1113,7 +1113,6 @@
                         </span>
                     </a>
                 </div>
-
                 <div
                     class="col-span-1 xxl:p-6 p-4 border border-neutral1 border-opacity-40 rounded duration-300 hover:border-b-4 hover:border-accent1 group/s-card small-tilt">
                     <div class="flex items-center lg:gap-3 gap-2 lg:mb-5 mb-3">
@@ -1141,7 +1140,7 @@
                     </div>
                     <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
-                            TThere are many variations of passages of available but to the majority
+                            There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
@@ -2067,7 +2066,7 @@
                     </div>
                     <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
-                            TThere are many variations of passages of available but to the majority
+                            There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
@@ -2088,7 +2087,6 @@
                         </span>
                     </a>
                 </div>
-
                 <div
                     class="col-span-1 xxl:p-6 p-4 border border-neutral1 border-opacity-40 rounded duration-300 hover:border-b-4 hover:border-accent2 group/s-card small-tilt">
                     <div class="flex items-center lg:gap-3 gap-2 lg:mb-5 mb-3">
@@ -2359,14 +2357,14 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 xxl:gap-x-8 xxl:gap-y-12 md:gap-x-6 md:gap-y-10 gap-x-4 gap-y-8">
             <div class="col-span-1 flex flex-col lg:gap-6 gap-4 duration-300 group/p-card small-tilt2">
                 <div class="relative overflow-hidden z-10">
-                    <a href="" class="block">
+                    <a href="https://www.samagri.com/" target="_blank" class="block">
                         <img class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover/p-card:scale-105"
                             src="assets/images/sam.svg" alt="project thumb">
                     </a>
                     <div
                         class="absolute bottom-0 ltr:left-0 rtl:right-0 z-30 w-full opacity-0 translate-y-full transition-all duration-300 group-hover/p-card:opacity-100 group-hover/p-card:translate-y-0 mb-6 ltr:md:ml-6 ltr:ml-3 rtl:md:mr-6 rtl:mr-3">
                         <ul class="flex items-center md:gap-3 gap-1 flex-wrap">
-                            <li><a href="#" class="tag">Web & Digital</a></li>
+                            <li><a href="https://www.samagri.com/" target="_blank" class="tag">Web & Digital</a></li>
                         </ul>
                     </div>
                 </div>
@@ -2374,28 +2372,28 @@
 
             <div class="col-span-1 flex flex-col lg:gap-6 gap-4 duration-300 group/p-card small-tilt2">
                 <div class="relative overflow-hidden z-10">
-                    <a href="" class="block">
+                    <a href="https://megatronindia.in/" target="_blank" class="block">
                         <img class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover/p-card:scale-105"
                             src="assets/images/megatron.svg" alt="project thumb">
                     </a>
                     <div
                         class="absolute bottom-0 ltr:left-0 rtl:right-0 z-30 w-full opacity-0 translate-y-full transition-all duration-300 group-hover/p-card:opacity-100 group-hover/p-card:translate-y-0 mb-6 ltr:md:ml-6 ltr:ml-3 rtl:md:mr-6 rtl:mr-3">
                         <ul class="flex items-center md:gap-3 gap-1 flex-wrap">
-                            <li><a href="#" class="tag">Web & Digital</a></li>
+                            <li><a href="https://megatronindia.in/" target="_blank" class="tag">Web & Digital</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-span-1 flex flex-col lg:gap-6 gap-4 duration-300 group/p-card small-tilt2">
                 <div class="relative overflow-hidden z-10">
-                    <a href="" class="block">
+                    <a href="https://krishnaskitchen.co.in/" target="_blank" class="block">
                         <img class="w-full h-full object-cover transition-transform duration-500 ease-out group-hover/p-card:scale-105"
                             src="./assets/images/krishnas-kitchen.svg" alt="project thumb">
                     </a>
                     <div
                         class="absolute bottom-0 ltr:left-0 rtl:right-0 z-30 w-full opacity-0 translate-y-full transition-all duration-300 group-hover/p-card:opacity-100 group-hover/p-card:translate-y-0 mb-6 ltr:md:ml-6 ltr:ml-3 rtl:md:mr-6 rtl:mr-3">
                         <ul class="flex items-center md:gap-3 gap-1 flex-wrap">
-                            <li><a href="#" class="tag">Web & Digital</a></li>
+                            <li><a href="https://krishnaskitchen.co.in/" target="_blank" class="tag">Web & Digital</a></li>
                         </ul>
                     </div>
                 </div>
@@ -2663,10 +2661,10 @@
                         <div class="xl:col-span-4 col-span-12">
                             <div class="flex flex-col gap-1">
                                 <span class="text-neutral1 xl:text-2xl lg:text-xl text-lg font-medium">
-                                    Shift Superviser
+                                    MERN Stack Development.
                                 </span>
                                 <span class="text-neutral2 text-opacity-80 text-base lg:text-lg font-thin">
-                                    Wipro Infrastructure Engineering (JCP pistions manufacturing)    
+                                    VSM INFOTECH PRIVATE LIMITED
                                 </span>
                             </div>
                         </div>
@@ -2719,7 +2717,7 @@
                         <div class="xl:col-span-4 col-span-12">
                             <div class="flex flex-col gap-1">
                                 <span class="text-neutral1 xl:text-2xl lg:text-xl text-lg font-medium">
-                                    Mern-stack Developer
+                                  Software Developer
                                 </span>
                                 <span class="text-neutral2 text-opacity-80 text-base lg:text-lg font-thin">
                                     CO-Create pvt Ltd.
@@ -3867,7 +3865,7 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
                     class="hgi-stroke hgi-arrow-up-right-01"></i></span>
         </button>
 
-        <div class="xl:mb-12 lg:mb-10 md:mb-8 mb-6">
+        <!-- <div class="xl:mb-12 lg:mb-10 md:mb-8 mb-6">
             <span
                 class="text-sm xl:px-3 px-2 xl:py-1.5 py-1 border-[0.5px] border-light text-light text-opacity-80 rounded-full inline-block xl:mb-3 mb-2">SERVICES
             </span>
@@ -3882,7 +3880,7 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
             <p class="text-base lg:text-xl text-neutral2 font-thin">
                 Cutting-edge tools, seamless integration.
             </p>
-        </div>
+        </div> -->
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 xl:grid-cols-2 lg:gap-6 gap-4">
 
@@ -4270,7 +4268,7 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
                         <div class="text-center">
                             <span class="block lg:text-lg text-base text-light font-medium">Phone</span>
                             <a href="tel:3025550107" class="block lg:text-lg text-base text-light font-normal">(+91)
-                                8897822185</a>
+                                9347622353</a>
                         </div>
                     </div>
 
@@ -4280,8 +4278,8 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
                         </div>
                         <div class="text-center">
                             <span class="block lg:text-lg text-base text-light font-medium">Email</span>
-                            <a href="mailto:srinivasareddybobba208.com"
-                                class="block lg:text-lg text-base text-light font-normal">srinivasareddybobba208.com</a>
+                            <a href="mailto:srinubobba0@gmail.com"
+                                class="block lg:text-lg text-base text-light font-normal">srinubobba0@gmail.com</a>
                         </div>
                     </div>
 
