--- a/index.html
+++ b/index.html
@@ -1090,13 +1090,13 @@
                             <h5 class="text-neutral1">Web Development</h5>
                         </div>
                     </div>
-                    <div class="lg:mb-8 md:mb-6 mb-4">
+                    <!-- <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
                             There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
-                    </div>
+                    </div> -->
                     <a href="#" class="flex items-center justify-between">
                         <span class="text-neutral1 text-base duration-300 group-hover/s-card:text-accent1">
                             Read More
@@ -1138,13 +1138,13 @@
                             <h5 class="text-neutral1">UI/UX Design</h5>
                         </div>
                     </div>
-                    <div class="lg:mb-8 md:mb-6 mb-4">
+                    <!-- <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
                             There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
-                    </div>
+                    </div> -->
                     <a href="#" class="flex items-center justify-between">
                         <span class="text-neutral1 text-base duration-300 group-hover/s-card:text-accent1">
                             Read More
@@ -1180,13 +1180,13 @@
                             <h5 class="text-neutral1">Digital Marketing</h5>
                         </div>
                     </div>
-                    <div class="lg:mb-8 md:mb-6 mb-4">
+                    <!-- <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
                             There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
-                    </div>
+                    </div> -->
                     <a href="#" class="flex items-center justify-between">
                         <span class="text-neutral1 text-base duration-300 group-hover/s-card:text-accent1">
                             Read More
@@ -2015,13 +2015,13 @@
                             <h5 class="text-neutral1">Web Development</h5>
                         </div>
                     </div>
-                    <div class="lg:mb-8 md:mb-6 mb-4">
+                    <!-- <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
                             There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
-                    </div>
+                    </div> -->
                     <a href="#" class="flex items-center justify-between">
                         <span class="text-neutral1 text-base duration-300 group-hover/s-card:text-accent2">
                             Read More
@@ -2064,13 +2064,13 @@
                             <h5 class="text-neutral1">UI/UX Design</h5>
                         </div>
                     </div>
-                    <div class="lg:mb-8 md:mb-6 mb-4">
+                    <!-- <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
                             There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
-                    </div>
+                    </div> -->
                     <a href="#" class="flex items-center justify-between">
                         <span class="text-neutral1 text-base duration-300 group-hover/s-card:text-accent2">
                             Read More
@@ -2105,13 +2105,13 @@
                             <h5 class="text-neutral1">Digital Marketing</h5>
                         </div>
                     </div>
-                    <div class="lg:mb-8 md:mb-6 mb-4">
+                    <!-- <div class="lg:mb-8 md:mb-6 mb-4">
                         <p class="text-base lg:text-xl text-neutral2 font-thin">
                             There are many variations of passages of available but to the majority
                             have
                             suffered but the into majority.
                         </p>
-                    </div>
+                    </div> -->
                     <a href="#" class="flex items-center justify-between">
                         <span class="text-neutral1 text-base duration-300 group-hover/s-card:text-accent2">
                             Read More
@@ -2668,7 +2668,7 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="xl:col-span-5 col-span-12">
+                        <!-- <div class="xl:col-span-5 col-span-12">
                             <div class="xl:max-w-[340px] xl:ml-auto">
                                 <p class="text-neutral2 text-opacity-80 text-base lg:text-lg">
                                     There are many variations of passages of available but to the
@@ -2676,7 +2676,7 @@
                                     have suffered but the into majority.
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- vertical line -->
@@ -2698,14 +2698,14 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="xl:col-span-5 col-span-12">
+                        <!-- <div class="xl:col-span-5 col-span-12">
                             <div class="xl:max-w-[340px] lg:ml-auto">
                                 <p class="text-neutral2 text-opacity-80 text-base lg:text-lg">
                                     There are many variations of passages of available but to the
                                     majority have suffered but the into majority.
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="grid grid-cols-12 lg:gap-4 gap-2">
@@ -2724,14 +2724,14 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="xl:col-span-5 col-span-12">
+                        <!-- <div class="xl:col-span-5 col-span-12">
                             <div class="xl:max-w-[340px] lg:ml-auto">
                                 <p class="text-neutral2 text-opacity-80 text-base lg:text-lg">
                                     There are many variations of passages of available but to the
                                     majority have suffered but the into majority.
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
@@ -2760,14 +2760,14 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="xl:col-span-5 col-span-12">
+                        <!-- <div class="xl:col-span-5 col-span-12">
                             <div class="xl:max-w-[340px] xl:ml-auto">
                                 <p class="text-neutral2 text-opacity-80 text-base lg:text-lg">
                                     There are many variations of passages of available but to the
                                     majority have suffered but the into majority.
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <!-- vertical line -->
@@ -2790,14 +2790,14 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="xl:col-span-5 col-span-12">
+                        <!-- <div class="xl:col-span-5 col-span-12">
                             <div class="xl:max-w-[340px] xl:ml-auto">
                                 <p class="text-neutral2 text-opacity-80 text-base lg:text-lg">
                                     There are many variations of passages of available but to the
                                     majority have suffered but the into majority.
                                 </p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
@@ -3864,7 +3864,6 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
             <span class="text-lg group-hover/btn:rotate-90 duration-300"><i
                     class="hgi-stroke hgi-arrow-up-right-01"></i></span>
         </button>
-
         <!-- <div class="xl:mb-12 lg:mb-10 md:mb-8 mb-6">
             <span
                 class="text-sm xl:px-3 px-2 xl:py-1.5 py-1 border-[0.5px] border-light text-light text-opacity-80 rounded-full inline-block xl:mb-3 mb-2">SERVICES
@@ -3881,7 +3880,6 @@ class="col-span-1 lg:px-6 px-4 lg:py-8 py-6 border border-neutral1 border-opacit
                 Cutting-edge tools, seamless integration.
             </p>
         </div> -->
-
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 xl:grid-cols-2 lg:gap-6 gap-4">
 
             <div
